@@ -40,6 +40,7 @@ import javax.security.auth.login.AppConfigurationEntry;
 import javax.security.auth.login.Configuration;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 
 import static javax.security.auth.login.AppConfigurationEntry.LoginModuleControlFlag.OPTIONAL;
@@ -126,11 +127,11 @@ public class AutoMembershipTest extends AbstractExternalTest {
                         new AppConfigurationEntry(
                                 GuestLoginModule.class.getName(),
                                 OPTIONAL,
-                                ImmutableMap.of()),
+                                Map.of()),
                         new AppConfigurationEntry(
                                 TokenLoginModule.class.getName(),
                                 SUFFICIENT,
-                                ImmutableMap.of()),
+                                Map.of()),
                         new AppConfigurationEntry(
                                 ExternalLoginModule.class.getName(),
                                 SUFFICIENT,
@@ -140,7 +141,7 @@ public class AutoMembershipTest extends AbstractExternalTest {
                         new AppConfigurationEntry(
                                 LoginModuleImpl.class.getName(),
                                 SUFFICIENT,
-                                ImmutableMap.of())
+                                Map.of())
                 };
             }
         };
