@@ -36,6 +36,7 @@ import javax.security.auth.login.Configuration;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import java.util.TreeSet;
 import java.util.concurrent.atomic.AtomicLong;
@@ -149,11 +150,11 @@ public class ExternalLoginTest extends AbstractExternalTest {
                         new AppConfigurationEntry(
                                 GuestLoginModule.class.getName(),
                                 OPTIONAL,
-                                ImmutableMap.of()),
+                                Map.of()),
                         new AppConfigurationEntry(
                                 TokenLoginModule.class.getName(),
                                 SUFFICIENT,
-                                ImmutableMap.of()),
+                                Map.of()),
                         new AppConfigurationEntry(
                                 ExternalLoginModule.class.getName(),
                                 SUFFICIENT,
@@ -163,7 +164,7 @@ public class ExternalLoginTest extends AbstractExternalTest {
                         new AppConfigurationEntry(
                                 LoginModuleImpl.class.getName(),
                                 SUFFICIENT,
-                                ImmutableMap.of())
+                                Map.of())
                 };
             }
         };
