@@ -39,6 +39,8 @@ import org.junit.Test;
 import javax.jcr.PropertyType;
 import javax.jcr.ValueFactory;
 import javax.jcr.security.AccessControlException;
+
+import java.util.Map;
 import java.util.Set;
 
 import static org.junit.Assert.assertEquals;
@@ -52,7 +54,7 @@ import static org.junit.Assert.fail;
  */
 public class CompositeRestrictionProviderTest extends AbstractSecurityTest implements AccessControlConstants {
 
-    private RestrictionProvider rp1 = new TestProvider(ImmutableMap.<String, RestrictionDefinition>of(
+    private RestrictionProvider rp1 = new TestProvider(ImmutableMap.of(
             REP_GLOB, new RestrictionDefinitionImpl(REP_GLOB, Type.STRING, false),
             REP_NT_NAMES, new RestrictionDefinitionImpl(REP_NT_NAMES, Type.NAMES, false),
             REP_PREFIXES, new RestrictionDefinitionImpl(REP_PREFIXES, Type.STRINGS, false)
@@ -62,7 +64,7 @@ public class CompositeRestrictionProviderTest extends AbstractSecurityTest imple
             "longs", new RestrictionDefinitionImpl("longs", Type.LONGS, false)
     ));
 
-    private RestrictionProvider rp3 = new TestProvider(ImmutableMap.of(
+    private RestrictionProvider rp3 = new TestProvider(Map.of(
             "string", new RestrictionDefinitionImpl("string", Type.STRING, false)),
             true
     );
