@@ -16,7 +16,6 @@
  */
 package org.apache.jackrabbit.oak.spi.security.authentication;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
 import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
 import org.apache.jackrabbit.api.security.authentication.token.TokenCredentials;
 import org.apache.jackrabbit.api.security.principal.PrincipalManager;
@@ -126,7 +125,7 @@ public class AbstractLoginModuleTest {
     @Test
     public void testInitializeWithOptions() {
         AbstractLoginModule lm = new TestLoginModule(TestCredentials.class);
-        Map<String, String> options = ImmutableMap.of("key", "value");
+        Map<String, String> options = Map.of("key", "value");
         lm.initialize(new Subject(), null, Collections.emptyMap(), options);
 
         assertNotSame(options, lm.options);
@@ -140,7 +139,7 @@ public class AbstractLoginModuleTest {
 
     @Test
     public void testLogout() throws Exception {
-        AbstractLoginModule loginModule = initLoginModule(TestCredentials.class, ImmutableMap.of());
+        AbstractLoginModule loginModule = initLoginModule(TestCredentials.class, Map.of());
 
         assertFalse(loginModule.logout());
     }
@@ -350,7 +349,7 @@ public class AbstractLoginModuleTest {
 
     @Test
     public void testAbort() throws LoginException {
-        AbstractLoginModule loginModule = initLoginModule(TestCredentials.class, ImmutableMap.of());
+        AbstractLoginModule loginModule = initLoginModule(TestCredentials.class, Map.of());
 
         assertTrue(loginModule.abort());
     }
@@ -461,7 +460,7 @@ public class AbstractLoginModuleTest {
         subject.getPublicCredentials().add(new TestCredentials());
 
         AbstractLoginModule lm = new TestLoginModule(TestCredentials.class);
-        lm.initialize(subject, null, ImmutableMap.of(), null);
+        lm.initialize(subject, null, Map.of(), null);
 
         assertTrue(lm.getCredentials() instanceof TestCredentials);
     }
@@ -530,7 +529,7 @@ public class AbstractLoginModuleTest {
 
     @Test
     public void testGetSharedPreAuthLoginEmptySharedState() {
-        AbstractLoginModule loginModule = initLoginModule(TestCredentials.class, ImmutableMap.of());
+        AbstractLoginModule loginModule = initLoginModule(TestCredentials.class, Map.of());
         assertNull(loginModule.getSharedPreAuthLogin());
     }
 
