@@ -23,7 +23,6 @@ import javax.jcr.Credentials;
 import javax.jcr.SimpleCredentials;
 
 import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
-import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
 
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -103,10 +102,10 @@ public class CompositeCredentialsSupportTest {
         Map<String, ?> expectedS = ImmutableMap.of("a", "a", "b", Boolean.TRUE, "c", new TestCredentials());
         assertTrue(credentialsSupport.setAttributes(sc, expectedS));
 
-        Map<String, ?> expectedT = ImmutableMap.of("test", "Test1CredentialsSupport");
+        Map<String, ?> expectedT = Map.of("test", "Test1CredentialsSupport");
         assertTrue(credentialsSupport.setAttributes(tc, expectedT));
 
-        assertFalse(credentialsSupport.setAttributes(dummy, ImmutableMap.of("none", "none")));
+        assertFalse(credentialsSupport.setAttributes(dummy, Map.of("none", "none")));
 
         attributesS = credentialsSupport.getAttributes(sc);
         for (Map.Entry<String, ?> entry : expectedS.entrySet()) {
@@ -170,7 +169,7 @@ public class CompositeCredentialsSupportTest {
             if (credentials instanceof TestCredentials) {
                 return attributes;
             } else {
-                return ImmutableMap.of();
+                return Map.of();
             }
         }
 
