@@ -212,8 +212,8 @@ public class DefaultSegmentWriterTest {
     public void testMapRecord() throws IOException {
         RecordId blockId = writer.writeBlock(bytes, 0, bytes.length);
 
-        MapRecord zero = new MapRecord(store.fileStore().getReader(), writer.writeMap(null, ImmutableMap.<String, RecordId>of()));
-        MapRecord one = new MapRecord(store.fileStore().getReader(), writer.writeMap(null, ImmutableMap.of("one", blockId)));
+        MapRecord zero = new MapRecord(store.fileStore().getReader(), writer.writeMap(null, Map.of()));
+        MapRecord one = new MapRecord(store.fileStore().getReader(), writer.writeMap(null, Map.of("one", blockId)));
         MapRecord two = new MapRecord(store.fileStore().getReader(), writer.writeMap(null, ImmutableMap.of("one", blockId, "two", blockId)));
         Map<String, RecordId> map = new HashMap<>();
         for (int i = 0; i < 1000; i++) {
@@ -276,11 +276,11 @@ public class DefaultSegmentWriterTest {
     public void testHugeMapRecordErrorSizeDiscardWrites() throws IOException {
         RecordId blockId = writer.writeBlock(bytes, 0, bytes.length);
 
-        MapRecord one = new MapRecord(store.fileStore().getReader(), writer.writeMap(null, ImmutableMap.of("one", blockId)));
+        MapRecord one = new MapRecord(store.fileStore().getReader(), writer.writeMap(null, Map.of("one", blockId)));
         MapRecord hugeMapRecord = Mockito.spy(one);
         Mockito.when(hugeMapRecord.size()).thenReturn(MapRecord.ERROR_SIZE_DISCARD_WRITES);
 
-        MapRecord many = new MapRecord(store.fileStore().getReader(), writer.writeMap(hugeMapRecord, ImmutableMap.of("one", blockId)));
+        MapRecord many = new MapRecord(store.fileStore().getReader(), writer.writeMap(hugeMapRecord, Map.of("one", blockId)));
     }
 
     @Test
@@ -288,11 +288,11 @@ public class DefaultSegmentWriterTest {
         System.setProperty("oak.segmentNodeStore.allowWritesOnHugeMapRecord", "true");
         RecordId blockId = writer.writeBlock(bytes, 0, bytes.length);
 
-        MapRecord one = new MapRecord(store.fileStore().getReader(), writer.writeMap(null, ImmutableMap.of("one", blockId)));
+        MapRecord one = new MapRecord(store.fileStore().getReader(), writer.writeMap(null, Map.of("one", blockId)));
         MapRecord hugeMapRecord = Mockito.spy(one);
         Mockito.when(hugeMapRecord.size()).thenReturn(MapRecord.ERROR_SIZE_DISCARD_WRITES);
 
-        MapRecord many = new MapRecord(store.fileStore().getReader(), writer.writeMap(hugeMapRecord, ImmutableMap.of("one", blockId)));
+        MapRecord many = new MapRecord(store.fileStore().getReader(), writer.writeMap(hugeMapRecord, Map.of("one", blockId)));
     }
 
     @Test(expected = UnsupportedOperationException.class)
@@ -301,11 +301,11 @@ public class DefaultSegmentWriterTest {
         System.setProperty(DefaultSegmentWriter.MAX_MAP_RECORD_SIZE_KEY, String.valueOf(0));
         RecordId blockId = writer.writeBlock(bytes, 0, bytes.length);
 
-        MapRecord one = new MapRecord(store.fileStore().getReader(), writer.writeMap(null, ImmutableMap.of("one", blockId)));
+        MapRecord one = new MapRecord(store.fileStore().getReader(), writer.writeMap(null, Map.of("one", blockId)));
         MapRecord hugeMapRecord = Mockito.spy(one);
         Mockito.when(hugeMapRecord.size()).thenReturn(MapRecord.ERROR_SIZE_HARD_STOP);
 
-        MapRecord many = new MapRecord(store.fileStore().getReader(), writer.writeMap(hugeMapRecord, ImmutableMap.of("one", blockId)));
+        MapRecord many = new MapRecord(store.fileStore().getReader(), writer.writeMap(hugeMapRecord, Map.of("one", blockId)));
         assertEquals(MapRecord.ERROR_SIZE_HARD_STOP, (int) Integer.getInteger(DefaultSegmentWriter.MAX_MAP_RECORD_SIZE_KEY, 0));
     }
 
@@ -316,11 +316,11 @@ public class DefaultSegmentWriterTest {
         RecordId blockId = writer.writeBlock(bytes, 0, bytes.length);
         final ListAppender<ILoggingEvent> logAppender = subscribeAppender();
 
-        MapRecord one = new MapRecord(store.fileStore().getReader(), writer.writeMap(null, ImmutableMap.of("one", blockId)));
+        MapRecord one = new MapRecord(store.fileStore().getReader(), writer.writeMap(null, Map.of("one", blockId)));
         MapRecord hugeMapRecord = Mockito.spy(one);
         Mockito.when(hugeMapRecord.size()).thenReturn(MapRecord.ERROR_SIZE);
 
-        MapRecord many = new MapRecord(store.fileStore().getReader(), writer.writeMap(hugeMapRecord, ImmutableMap.of("one", blockId)));
+        MapRecord many = new MapRecord(store.fileStore().getReader(), writer.writeMap(hugeMapRecord, Map.of("one", blockId)));
         assertEquals(logAppender.list.get(0).getFormattedMessage(), "Map entry has more than 450000000 entries. Please remove entries.");
         assertEquals(logAppender.list.get(0).getLevel(), Level.ERROR);
         assertEquals(MapRecord.ERROR_SIZE, (int) Integer.getInteger(DefaultSegmentWriter.MAX_MAP_RECORD_SIZE_KEY, 0));
@@ -334,11 +334,11 @@ public class DefaultSegmentWriterTest {
         RecordId blockId = writer.writeBlock(bytes, 0, bytes.length);
         final ListAppender<ILoggingEvent> logAppender = subscribeAppender();
 
-        MapRecord one = new MapRecord(store.fileStore().getReader(), writer.writeMap(null, ImmutableMap.of("one", blockId)));
+        MapRecord one = new MapRecord(store.fileStore().getReader(), writer.writeMap(null, Map.of("one", blockId)));
         MapRecord hugeMapRecord = Mockito.spy(one);
         Mockito.when(hugeMapRecord.size()).thenReturn(MapRecord.WARN_SIZE);
 
-        MapRecord many = new MapRecord(store.fileStore().getReader(), writer.writeMap(hugeMapRecord, ImmutableMap.of("one", blockId)));
+        MapRecord many = new MapRecord(store.fileStore().getReader(), writer.writeMap(hugeMapRecord, Map.of("one", blockId)));
         assertEquals(logAppender.list.get(0).getFormattedMessage(), "Map entry has more than 400000000 entries. Please remove entries.");
         assertEquals(logAppender.list.get(0).getLevel(), Level.WARN);
         assertEquals(MapRecord.WARN_SIZE, (int) Integer.getInteger(DefaultSegmentWriter.MAX_MAP_RECORD_SIZE_KEY, 0));
